<resources>
    <string name="app_name">Trackify</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gps_not_enabled">Please enable location services for app to work properly</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="tag">A simple way to keep track of your path</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="error_fetch">Something went wrong</string>
    <string name="error_save">Unable to save data</string>
    <string name="logout">Logout</string>
    <string name="logout_warning">Do you want to logout?</string>
    <string name="logout_success">Logout Successful</string>
    <string name="login_success">Login Successful</string>
    <string name="photos">Photos</string>
    <string name="covid_declaration">Covid Declaration</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_message">Confirm you are Covid positive since %s ?</string>
    <string name="covid_summary">You have marked yourself as Covid positive since %s</string>
    <string name="mark_as_safe">Mark as Safe</string>
    <string name="mark_as_safe_qn">Mark as Safe ?</string>
    <string name="your_covid_status">Your Covid Status</string>
    <string name="map_type">Map type</string>
    <string name="default_map">Default</string>
    <string name="covid_view">Covid</string>
    <string name="review_notification_channel">Safety Review Channel</string>
    <string name="recovery_message">It\'s been 2 weeks since you marked yourself as Covid Positive. Have you recovered?</string>
    <string name="recovery_message_title">How are you?</string>
</resources>