<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.android.arijit.firebase.walker.viewmodel.FormViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".views.CovidSummaryFragment">

        <TextView
            android:id="@+id/tv_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/your_covid_status"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_head"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@{@string/covid_summary(viewModel.recordDate)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="32sp"
            tools:text="@string/covid_summary" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_summary"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:text="@string/mark_as_safe" />

    </RelativeLayout>
</layout>
