<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".views.HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/map_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/hori_options_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/option_map_default"
                style="@style/OptionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="default_map">

                <ImageView
                    style="@style/ButtonBottomSheet"
                    android:padding="3dp"
                    android:src="@drawable/ic_map_type_default"
                    tools:ignore="ContentDescription" />

            </com.google.android.material.card.MaterialCardView>

            <CheckedTextView
                android:id="@+id/option_map_default_label"
                style="@style/OptionButton.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_map" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/option_map_covid"
                style="@style/OptionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="covid_tag">

                <ImageView
                    style="@style/ButtonBottomSheet"
                    android:padding="3dp"
                    android:src="@drawable/ic_map_type_danger"
                    tools:ignore="ContentDescription" />

            </com.google.android.material.card.MaterialCardView>

            <CheckedTextView
                android:id="@+id/option_map_covid_label"
                style="@style/OptionButton.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/covid_view" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="32dp" />

</LinearLayout>

